testsuite/tests/module/mod42.hs
-- !!! Not "simple type" in instance
module M where
instance Eq a
